# casper-event-standard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile  rust-toolchain.toml
.github/workflows/: tests.yml
casper-event-standard/: Cargo.toml
casper-event-standard-macro/: Cargo.toml
casper-event-standard-macro/src/: lib.rs
casper-event-standard/src/: cl_type2.rs  contract.rs  lib.rs  schema.rs
casper-event-standard/tests/: test_event.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: vm_tests.rs
