[workspace]
members = [
    "casper-event-standard",
    "casper-event-standard-macro",
    "integration-tests"
]

[workspace.package]
version = "0.4.0"
authors = ["Maciej Zieliński <maciej@odra.dev>"]
description = "The smart contract level events for Casper."
edition = "2021"
readme = "./README.md"
repository = "https://github.com/make-software/casper-event-standard"
license = "Apache-2.0"
