[package]
name = "casper-event-standard-macro"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.50"
quote = "1.0.23"
syn = "1.0.107"

[dev-dependencies]
pretty_assertions = "1.3.0"
