[package]
name = "casper-event-standard"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
casper-types = "1.5.0"
casper-event-standard-macro = { version = "0.1.0", path = "../casper-event-standard-macro" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
casper-contract = { version = "1.4.4" }

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
