[package]
name = "casper-event-standard"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
casper-types = "3.0.0"
casper-event-standard-macro = { version = "0.4.0", path = "../casper-event-standard-macro" }
serde = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
casper-contract = { version = "3.0.0", default-features = false }

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[features]
serde = [ "dep:serde" ]
